--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@ env/
 
 # データベース
 *.db
-data/
 
 # ログ
 *.log
-
 
 # バイナリ
 *.bin
@@ -16,6 +14,23 @@ data/
 # キャッシュ
 *.cache
 __pycache__/
+*.pyc
+.pytest_cache/
 
+# IDE関連
+.vscode/
+.idea/
+*.swp
+*.swo
 
+# 仮想環境
+venv/
+.venv/
+ENV/
+
+# その他
+.DS_Store
+Thumbs.db
+
+# プロジェクト固有
 utils/
